fix name logo.svg

--- a/index.html
+++ b/index.html
@@ -7004,7 +7004,7 @@
 									<div class="module-logo d-flex   navbar-brand-plain" id="size-logo" itemscope="itemscope" itemtype="https://schema.org/Brand">
 										<a class="navbar-brand d-flex p-0 pos-rel" href="#" rel="home" itemprop="url">
 											<span class="navbar-brand-inner post-rel"> 
-												<img class="logo-default" src="./assets/images/Logo.svg" alt="DeeplyAi" itemprop="url"></span></a>
+												<img class="logo-default" src="./assets/images/logo.svg" alt="DeeplyAi" itemprop="url"></span></a>
 									</div>
 
 								</div>
@@ -7906,7 +7906,7 @@
 					<a class="navbar-brand d-flex pos-rel" href="#">
 						<span class="navbar-brand-inner">
 							<img class="logo-default"
-								src="./assets/images/Logo.svg"
+								src="./assets/images/logo.svg"
 								alt="DeeplyAi">
 						</span>
 					</a>
@@ -12594,7 +12594,7 @@
 										class="lqd-imggrp-img-container d-inline-flex pos-rel align-items-center justify-content-center ">
 										<figure class="w-100 pos-rel">
 											<img width="76" height="19"
-												src="./assets/images/Logo.svg"
+												src="./assets/images/logo.svg"
 												class="attachment-full size-full wp-image-69" alt="" decoding="async"
 												itemprop="image">
 										</figure>
