change new logo

--- a/index.html
+++ b/index.html
@@ -12688,95 +12688,14 @@
 									<div id="ld-fancy-heading-66f2b31eee559" class="ld-fancy-heading pos-rel">
 										<p
 											class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-											All images are fore demo purposes only.
-
-											I am bound by the terms of the Service I accept Privacy Policy.</p>
+											© 2025 DeeplyAi. All Rights Reserved.</p>
 									</div>
 
 								</div>
 							</div>
 						</div>
-						<div class="elementor-element elementor-element-13a9c356 e-con-full e-flex e-con e-child"
-							data-id="13a9c356" data-element_type="container">
-							<div class="elementor-element elementor-element-8698160 elementor-shape-rounded elementor-grid-0 e-grid-align-center elementor-widget elementor-widget-social-icons"
-								data-id="8698160" data-element_type="widget" data-widget_type="social-icons.default">
-								<div class="elementor-widget-container">
-									<div class="elementor-social-icons-wrapper elementor-grid">
-										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon- elementor-animation-pulse-grow elementor-repeater-item-bf4e590"
-												target="_blank">
-												<span class="elementor-screen-only"></span>
-												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-													viewbox="0 0 24 24" fill="none">
-													<g clip-path="url(#clip0_29_193)">
-														<path d="M8 20L12 11" stroke="currentColor" fill="none"
-															stroke-width="1.25" stroke-linecap="round"
-															stroke-linejoin="round"></path>
-														<path
-															d="M10.7 14C11.137 15.263 12.13 16 13.25 16C15.321 16 17 14.446 17 12C17.0009 11.2698 16.8418 10.5483 16.5339 9.88621C16.2261 9.2241 15.777 8.63744 15.2182 8.16747C14.6593 7.69751 14.0044 7.35564 13.2993 7.1659C12.5942 6.97616 11.8561 6.94316 11.1369 7.0692C10.4177 7.19525 9.73478 7.47729 9.13623 7.89551C8.53769 8.31372 8.038 8.85795 7.6723 9.48994C7.3066 10.1219 7.08376 10.8264 7.01944 11.5537C6.95512 12.281 7.05088 13.0136 7.3 13.7"
-															stroke="currentColor" fill="none" stroke-width="1.25"
-															stroke-linecap="round" stroke-linejoin="round"></path>
-														<path
-															d="M3 12C3 13.1819 3.23279 14.3522 3.68508 15.4442C4.13738 16.5361 4.80031 17.5282 5.63604 18.364C6.47177 19.1997 7.46392 19.8626 8.55585 20.3149C9.64778 20.7672 10.8181 21 12 21C13.1819 21 14.3522 20.7672 15.4442 20.3149C16.5361 19.8626 17.5282 19.1997 18.364 18.364C19.1997 17.5282 19.8626 16.5361 20.3149 15.4442C20.7672 14.3522 21 13.1819 21 12C21 10.8181 20.7672 9.64778 20.3149 8.55585C19.8626 7.46392 19.1997 6.47177 18.364 5.63604C17.5282 4.80031 16.5361 4.13738 15.4442 3.68508C14.3522 3.23279 13.1819 3 12 3C10.8181 3 9.64778 3.23279 8.55585 3.68508C7.46392 4.13738 6.47177 4.80031 5.63604 5.63604C4.80031 6.47177 4.13738 7.46392 3.68508 8.55585C3.23279 9.64778 3 10.8181 3 12Z"
-															stroke="currentColor" fill="none" stroke-width="1.25"
-															stroke-linecap="round" stroke-linejoin="round"></path>
-													</g>
-													<defs>
-														<clippath id="clip0_29_193">
-															<rect width="24" height="24" fill="white"></rect>
-														</clippath>
-													</defs>
-												</svg> </a>
-										</span>
-										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon- elementor-animation-pulse-grow elementor-repeater-item-e70e93b"
-												target="_blank">
-												<span class="elementor-screen-only"></span>
-												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-													viewbox="0 0 24 24" fill="none">
-													<g clip-path="url(#clip0_29_198)">
-														<path
-															d="M7 10V14H10V21H14V14H17L18 10H14V8C14 7.73478 14.1054 7.48043 14.2929 7.29289C14.4804 7.10536 14.7348 7 15 7H18V3H15C13.6739 3 12.4021 3.52678 11.4645 4.46447C10.5268 5.40215 10 6.67392 10 8V10H7Z"
-															stroke="currentColor" fill="none" stroke-width="1.25"
-															stroke-linecap="round" stroke-linejoin="round"></path>
-													</g>
-													<defs>
-														<clippath id="clip0_29_198">
-															<rect width="24" height="24" fill="white"></rect>
-														</clippath>
-													</defs>
-												</svg> </a>
-										</span>
-										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon- elementor-animation-pulse-grow elementor-repeater-item-75e0345"
-												target="_blank">
-												<span class="elementor-screen-only"></span>
-												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-													viewbox="0 0 24 24" fill="none">
-													<g clip-path="url(#clip0_29_201)">
-														<path
-															d="M4 8C4 6.93913 4.42143 5.92172 5.17157 5.17157C5.92172 4.42143 6.93913 4 8 4H16C17.0609 4 18.0783 4.42143 18.8284 5.17157C19.5786 5.92172 20 6.93913 20 8V16C20 17.0609 19.5786 18.0783 18.8284 18.8284C18.0783 19.5786 17.0609 20 16 20H8C6.93913 20 5.92172 19.5786 5.17157 18.8284C4.42143 18.0783 4 17.0609 4 16V8Z"
-															stroke="currentColor" fill="none" stroke-width="1.25"
-															stroke-linecap="round" stroke-linejoin="round"></path>
-														<path
-															d="M9 12C9 12.7956 9.31607 13.5587 9.87868 14.1213C10.4413 14.6839 11.2044 15 12 15C12.7956 15 13.5587 14.6839 14.1213 14.1213C14.6839 13.5587 15 12.7956 15 12C15 11.2044 14.6839 10.4413 14.1213 9.87868C13.5587 9.31607 12.7956 9 12 9C11.2044 9 10.4413 9.31607 9.87868 9.87868C9.31607 10.4413 9 11.2044 9 12Z"
-															stroke="currentColor" fill="none" stroke-width="1.25"
-															stroke-linecap="round" stroke-linejoin="round"></path>
-														<path d="M16.5 7.5V7.50724" stroke="currentColor" fill="none"
-															stroke-width="1.25" stroke-linecap="round"
-															stroke-linejoin="round"></path>
-													</g>
-													<defs>
-														<clippath id="clip0_29_201">
-															<rect width="24" height="24" fill="white"></rect>
-														</clippath>
-													</defs>
-												</svg> </a>
-										</span>
-									</div>
-								</div>
-							</div>
-						</div>
+						
+						
 					</div>
 				</div>
 			</div>
