--- a/contact.html
+++ b/contact.html
@@ -2227,10 +2227,8 @@
 											class="main-nav d-flex reset-ul inline-ul lqd-menu-counter-right lqd-menu-items-inline main-nav-hover-fill"
 											itemtype="http://schema.org/SiteNavigationElement" itemscope="itemscope"
 											data-submenu-options='{"toggleType":"fade","handler":"mouse-in-out"}'>
-											<li id="menu-item-468"
-												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-15 current_page_item menu-item-468">
-												<a href="#" aria-current="page">Home</a>
-											</li>
+											<li id="menu-item-468" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-468">
+												<a href="https://deeplyai.app">Home</a></li>
 											<li id="menu-item-469"
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-469">
 												<a href="https://deeplyai.app/about.html">About</a>
@@ -2244,9 +2242,10 @@
 												<a href="https://deeplyai.app/services.html">Services</a>
 											</li>
 											<li id="menu-item-470"
-												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-470">
-												<a href="https://deeplyai.app/contact.html">Contact</a>
-											</li>
+												class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-460 current_page_item menu-item-470">
+												<a href="#" aria-current="page">Contact</a></li>
+
+
 										</ul>
 									</div>
 								</div>
