fix Solutions site

--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="DeeplyAi - ">
-	<link rel="pingback" href="https://starthubfourteen.liquid-themes.com/xmlrpc.php">
-	<title>About - DeeplyAi</title>
+	
+	<title>About &#8211; DeeplyAi</title>
 	<meta name="robots" content="max-image-preview:large">
 	<link rel="alternate" type="application/rss+xml" title="DeeplyAi"
 		href="#">
@@ -20,13 +20,7 @@
 	<link rel="preload"
 		href="./assets/fonts/lqd-essentials.woff2"
 		as="font" type="font/woff2" crossorigin>
-	<script type="text/javascript">
-		/* <![CDATA[ */
-		window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/", "svgExt": ".svg", "source": { "concatemoji": "https:\/\/starthubfourteen.liquid-themes.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.6.2" } };
-		/*! This file is auto-generated */
-		!function (i, n) { var o, s, e; function c(e) { try { var t = { supportTests: e, timestamp: (new Date).valueOf() }; sessionStorage.setItem(o, JSON.stringify(t)) } catch (e) { } } function p(e, t, n) { e.clearRect(0, 0, e.canvas.width, e.canvas.height), e.fillText(t, 0, 0); var t = new Uint32Array(e.getImageData(0, 0, e.canvas.width, e.canvas.height).data), r = (e.clearRect(0, 0, e.canvas.width, e.canvas.height), e.fillText(n, 0, 0), new Uint32Array(e.getImageData(0, 0, e.canvas.width, e.canvas.height).data)); return t.every(function (e, t) { return e === r[t] }) } function u(e, t, n) { switch (t) { case "flag": return n(e, "🏳️‍⚧️", "🏳️​⚧️") ? !1 : !n(e, "🇺🇳", "🇺​🇳") && !n(e, "🏴󠁧󠁢󠁥󠁮󠁧󠁿", "🏴​󠁧​󠁢​󠁥​󠁮​󠁧​󠁿"); case "emoji": return !n(e, "🐦‍⬛", "🐦​⬛") }return !1 } function f(e, t, n) { var r = "undefined" != typeof WorkerGlobalScope && self instanceof WorkerGlobalScope ? new OffscreenCanvas(300, 150) : i.createElement("canvas"), a = r.getContext("2d", { willReadFrequently: !0 }), o = (a.textBaseline = "top", a.font = "600 32px Arial", {}); return e.forEach(function (e) { o[e] = t(a, e, n) }), o } function t(e) { var t = i.createElement("script"); t.src = e, t.defer = !0, i.head.appendChild(t) } "undefined" != typeof Promise && (o = "wpEmojiSettingsSupports", s = ["flag", "emoji"], n.supports = { everything: !0, everythingExceptFlag: !0 }, e = new Promise(function (e) { i.addEventListener("DOMContentLoaded", e, { once: !0 }) }), new Promise(function (t) { var n = function () { try { var e = JSON.parse(sessionStorage.getItem(o)); if ("object" == typeof e && "number" == typeof e.timestamp && (new Date).valueOf() < e.timestamp + 604800 && "object" == typeof e.supportTests) return e.supportTests } catch (e) { } return null }(); if (!n) { if ("undefined" != typeof Worker && "undefined" != typeof OffscreenCanvas && "undefined" != typeof URL && URL.createObjectURL && "undefined" != typeof Blob) try { var e = "postMessage(" + f.toString() + "(" + [JSON.stringify(s), u.toString(), p.toString()].join(",") + "));", r = new Blob([e], { type: "text/javascript" }), a = new Worker(URL.createObjectURL(r), { name: "wpTestEmojiSupports" }); return void (a.onmessage = function (e) { c(n = e.data), a.terminate(), t(n) }) } catch (e) { } c(n = f(s, u, p)) } t(n) }).then(function (e) { for (var t in e) n.supports[t] = e[t], n.supports.everything = n.supports.everything && n.supports[t], "flag" !== t && (n.supports.everythingExceptFlag = n.supports.everythingExceptFlag && n.supports[t]); n.supports.everythingExceptFlag = n.supports.everythingExceptFlag && !n.supports.flag, n.DOMReady = !1, n.readyCallback = function () { n.DOMReady = !0 } }).then(function () { return e }).then(function () { var e; n.supports.everything || (n.readyCallback(), (e = n.source || {}).concatemoji ? t(e.concatemoji) : e.wpemoji && e.twemoji && (t(e.twemoji), t(e.wpemoji))) })) }((window, document), window._wpemojiSettings);
-		/* ]]> */
-	</script>
+	
 	<style id="wp-emoji-styles-inline-css" type="text/css">
 		img.wp-smiley,
 		img.emoji {
@@ -2875,7 +2869,7 @@
 						<span class="navbar-brand-inner">
 							<img class="logo-default"
 								src="./assets/images/logo.svg"
-								alt="Hub - Starthub Fourteen">
+								alt="DeeplyAi">
 						</span>
 					</a>
 
@@ -4022,11 +4016,7 @@
 	<script type="text/javascript"
 		src="./assets/js/index.js?ver=5.9.8"
 		id="swv-js"></script>
-	<script type="text/javascript" id="contact-form-7-js-extra">
-		/* <![CDATA[ */
-		var wpcf7 = { "api": { "root": "https:\/\/starthubfourteen.liquid-themes.com\/wp-json\/", "namespace": "contact-form-7\/v1" } };
-		/* ]]> */
-	</script>
+	
 	<script type="text/javascript"
 		src="./assets/js/index.js?ver=5.9.8"
 		id="contact-form-7-js"></script>
@@ -4122,11 +4112,7 @@
 	<script type="text/javascript"
 		src="./assets/js/core.min.js?ver=1.13.3"
 		id="jquery-ui-core-js"></script>
-	<script type="text/javascript" id="elementor-frontend-js-before">
-		/* <![CDATA[ */
-		var elementorFrontendConfig = { "environmentMode": { "edit": false, "wpPreview": false, "isScriptDebug": false }, "i18n": { "shareOnFacebook": "Share on Facebook", "shareOnTwitter": "Share on Twitter", "pinIt": "Pin it", "download": "Download", "downloadImage": "Download image", "fullscreen": "Fullscreen", "zoom": "Zoom", "share": "Share", "playVideo": "Play Video", "previous": "Previous", "next": "Next", "close": "Close", "a11yCarouselWrapperAriaLabel": "Carousel | Horizontal scrolling: Arrow Left & Right", "a11yCarouselPrevSlideMessage": "Previous slide", "a11yCarouselNextSlideMessage": "Next slide", "a11yCarouselFirstSlideMessage": "This is the first slide", "a11yCarouselLastSlideMessage": "This is the last slide", "a11yCarouselPaginationBulletMessage": "Go to slide" }, "is_rtl": false, "breakpoints": { "xs": 0, "sm": 480, "md": 768, "lg": 1025, "xl": 1440, "xxl": 1600 }, "responsive": { "breakpoints": { "mobile": { "label": "Mobile Portrait", "value": 767, "default_value": 767, "direction": "max", "is_enabled": true }, "mobile_extra": { "label": "Mobile Landscape", "value": 880, "default_value": 880, "direction": "max", "is_enabled": false }, "tablet": { "label": "Tablet Portrait", "value": 1024, "default_value": 1024, "direction": "max", "is_enabled": true }, "tablet_extra": { "label": "Tablet Landscape", "value": 1200, "default_value": 1200, "direction": "max", "is_enabled": true }, "laptop": { "label": "Laptop", "value": 1366, "default_value": 1366, "direction": "max", "is_enabled": false }, "widescreen": { "label": "Widescreen", "value": 2400, "default_value": 2400, "direction": "min", "is_enabled": true } } }, "version": "3.24.3", "is_static": false, "experimentalFeatures": { "e_font_icon_svg": true, "additional_custom_breakpoints": true, "container": true, "container_grid": true, "e_swiper_latest": true, "e_nested_atomic_repeaters": true, "e_optimized_control_loading": true, "e_onboarding": true, "home_screen": true, "ai-layout": true, "nested-elements": true, "editor_v2": true, "e_element_cache": true, "link-in-bio": true, "floating-buttons": true }, "urls": { "assets": "https:\/\/starthubfourteen.liquid-themes.com\/wp-content\/plugins\/elementor\/assets\/", "ajaxurl": "https:\/\/starthubfourteen.liquid-themes.com\/wp-admin\/admin-ajax.php" }, "nonces": { "floatingButtonsClickTracking": "f77deaff32" }, "swiperClass": "swiper", "settings": { "page": [], "editorPreferences": [] }, "kit": { "lqd_body_background_background": "classic", "active_breakpoints": ["viewport_mobile", "viewport_tablet", "viewport_tablet_extra", "viewport_widescreen"], "global_image_lightbox": "yes", "lightbox_enable_counter": "yes", "lightbox_enable_fullscreen": "yes", "lightbox_enable_zoom": "yes", "lightbox_enable_share": "yes", "lightbox_title_src": "title", "lightbox_description_src": "description" }, "post": { "id": 444, "title": "About%20%E2%80%93%20Hub%20%E2%80%93%20Starthub%20Fourteen", "excerpt": "", "featuredImage": false } };
-		/* ]]> */
-	</script>
+	
 	<script type="text/javascript"
 		src="./assets/js/frontend.min.js?ver=3.24.3"
 		id="elementor-frontend-js"></script>
