--- a/index.html
+++ b/index.html
@@ -6995,6 +6995,7 @@
 									<a  href="https://deeplyai.app/terms.html" target="_blank"><span class="elementor-icon-list-text">Term of Services</span></a>
 									
 								</li>
+								
 							</ul>
 						</div>
 					</div>
@@ -10967,9 +10968,7 @@
 																							class="ld-fancy-heading pos-rel">
 																							<p
 																								class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-																								Jack
-
-																								Envato User</p>
+																								Jack User</p>
 																						</div>
 
 																					</div>
@@ -11374,9 +11373,7 @@
 																							class="ld-fancy-heading pos-rel">
 																							<p
 																								class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-																								Pragm
-
-																								Envato User</p>
+																								Pragm User</p>
 																						</div>
 
 																					</div>
@@ -11779,9 +11776,7 @@
 																							class="ld-fancy-heading pos-rel">
 																							<p
 																								class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-																								Pragm
-
-																								Envato User</p>
+																								Pragm User</p>
 																						</div>
 
 																					</div>
@@ -12445,64 +12440,7 @@
 	<script type="text/javascript"
 		src="./assets/js/frontend.min.js?ver=3.24.3"
 		id="elementor-frontend-js"></script>
-	<div class="lqd-cc lqd-cc--inner pos-fix pointer-events-none"></div>
-
-	<div
-		class="lqd-cc--el lqd-cc-solid lqd-cc-explore d-flex align-items-center justify-content-center border-radius-circle circle pos-fix pointer-events-none">
-		<div class="lqd-cc-solid-bg d-flex pos-abs lqd-overlay"></div>
-		<div class="lqd-cc-solid-txt d-flex justify-content-center text-center pos-rel">
-			<div class="lqd-cc-solid-txt-inner">Explore</div>
-		</div>
-	</div>
-
-	<div class="lqd-cc--el lqd-cc-solid lqd-cc-drag d-flex align-items-center justify-content-center border-radius-circle circle pos-fix pointer-events-none">
-		<div class="lqd-cc-solid-bg d-flex pos-abs lqd-overlay"></div>
-		<div class="lqd-cc-solid-ext lqd-cc-solid-ext-left d-inline-flex align-items-center">
-			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32"
-				style="width: 1em; height: 1em;">
-				<path fill="currentColor"
-					d="M19.943 6.07L9.837 14.73a1.486 1.486 0 0 0 0 2.25l10.106 8.661c.96.826 2.457.145 2.447-1.125V7.195c0-1.27-1.487-1.951-2.447-1.125z">
-				</path>
-			</svg>
-		</div>
-		<div class="lqd-cc-solid-txt d-flex justify-content-center text-center pos-rel">
-			<div class="lqd-cc-solid-txt-inner">Drag</div>
-		</div>
-		<div class="lqd-cc-solid-ext lqd-cc-solid-ext-right d-inline-flex align-items-center">
-			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 32 32"
-				style="width: 1em; height: 1em;">
-				<path fill="currentColor"
-					d="M11.768 25.641l10.106-8.66a1.486 1.486 0 0 0 0-2.25L11.768 6.07c-.96-.826-2.457-.145-2.447 1.125v17.321c0 1.27 1.487 1.951 2.447 1.125z">
-				</path>
-			</svg>
-		</div>
-	</div>
-
-	<div class="lqd-cc--el lqd-cc-arrow d-inline-flex align-items-center pos-fix pos-tl pointer-events-none">
-		<svg width="80" height="80" viewbox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-			<path d="M60.4993 0V4.77005H8.87285L80 75.9207L75.7886 79.1419L4.98796 8.35478V60.4993H0V0H60.4993Z"></path>
-		</svg>
-	</div>
-
-	<div class="lqd-cc--el lqd-cc-custom-icon border-radius-circle circle pos-fix pointer-events-none">
-		<div
-			class="lqd-cc-ci d-inline-flex align-items-center justify-content-center border-radius-circle circle pos-rel">
-			<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 32 32"
-				style="width: 1em; height: 1em;">
-				<path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"
-					d="M16.03 6a1 1 0 0 1 1 1v8.02h8.02a1 1 0 1 1 0 2.01h-8.02v8.02a1 1 0 1 1-2.01 0v-8.02h-8.02a1 1 0 1 1 0-2.01h8.02v-8.01a1 1 0 0 1 1.01-1.01z">
-				</path>
-			</svg>
-		</div>
-	</div>
-
-	<div class="lqd-cc lqd-cc--outer pos-fix pos-tl pointer-events-none"></div>
 	
-	
-	
-	<template id="lqd-temp-sticky-header-sentinel">
-		<div class="lqd-sticky-sentinel invisible pos-abs pointer-events-none"></div>
-	</template>
 	
 	
 </body>
