--- a/services.html
+++ b/services.html
@@ -3435,14 +3435,14 @@
 							itemtype="http://schema.org/SiteNavigationElement" itemscope="itemscope">
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-15 current_page_item menu-item-468">
-								<a href="#" aria-current="page">Home</a>
+								<a href="https://deeplyai.app" aria-current="page">Home</a>
 							</li>
 							<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-469"><a
 									href="https://deeplyai.app/about.html">About</a></li>
 							<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-472"><a
 									href="https://deeplyai.app/solutions.html">Solutions</a></li>
 							<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-471"><a
-									href="https://deeplyai.app/services.html">Services</a></li>
+									href="#">Services</a></li>
 							<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-470"><a
 									href="https://deeplyai.app/contact.html">Contact</a></li>
 						</ul>
