fix link term & privacy

--- a/contact.html
+++ b/contact.html
@@ -2161,7 +2161,7 @@
 
 								<!--Privacy Policy-->
 								<li class="elementor-icon-list-item elementor-inline-item">
-									<a href="https://deeplyai.app/policy.html" target="_blank"><span
+									<a href="https://deeplyai.app/privacy.html" target="_blank"><span
 											class="elementor-icon-list-text">Privacy Policy</span></a>
 
 								</li>
@@ -4123,7 +4123,7 @@
 									<ul class="reset-ul inline-ul" id="lqd-custom-menu-6a7bcc85">
 
 										<li>
-											<a href="#" target="_self">
+											<a href="https://deeplyai.app/privacy.html" target="_self">
 
 												<span
 													class="link-icon d-inline-flex hide-if-empty left-icon icon-next-to-label"></span>
@@ -4132,7 +4132,7 @@
 
 
 										<li>
-											<a href="#" target="_self">
+											<a href="https://deeplyai.app/terms.html" target="_self">
 
 												<span
 													class="link-icon d-inline-flex hide-if-empty left-icon icon-next-to-label"></span>
