--- a/index.html
+++ b/index.html
@@ -6986,7 +6986,7 @@
 								
 								<!--Privacy Policy-->
 								<li class="elementor-icon-list-item elementor-inline-item">
-									<a  href="https://deeplyai.app/policy.html" target="_blank"><span class="elementor-icon-list-text">Privacy Policy</span></a>
+									<a  href="https://deeplyai.app/privacy.html" target="_blank"><span class="elementor-icon-list-text">Privacy Policy</span></a>
 									
 								</li>
 
@@ -12207,14 +12207,14 @@
 									<ul class="reset-ul inline-ul" id="lqd-custom-menu-6a7bcc85">
 
 										<li>
-											<a href="#" target="_self">
+											<a href="https://deeplyai.app/privacy.html" target="_self">
 
 												<span class="link-icon d-inline-flex hide-if-empty left-icon icon-next-to-label"></span> Privacy Policy </a>
 										</li>
 
 
 										<li>
-											<a href="#" target="_self">
+											<a href="https://deeplyai.app/terms.html" target="_self">
 
 												<span class="link-icon d-inline-flex hide-if-empty left-icon icon-next-to-label"></span> Term of Services </a>
 										</li>
