--- a/index.html
+++ b/index.html
@@ -8859,6 +8859,7 @@
 									</div>
 								</div>
 							</div>
+
 							<div data-custom-animations="true"
 								data-ca-options="{&quot;addChildTimelines&quot;:false,&quot;trigger&quot;:&quot;firstChild&quot;,&quot;animationTarget&quot;:&quot;:scope  &gt; .elementor-element:not(.lqd-exclude-parent-ca) &gt; .elementor-widget-container, :scope  &gt; .elementor-widget-hub_fancy_heading .lqd-split-lines .lqd-lines .split-inner, :scope  &gt; .elementor-widget-hub_fancy_heading .lqd-split-words .lqd-words .split-inner, :scope  &gt; .elementor-widget-hub_fancy_heading .lqd-split-chars .lqd-chars .split-inner, :scope  &gt; .elementor-widget-hub_fancy_heading .lqd-adv-txt-fig, :scope  &gt; .elementor-widget-ld_custom_menu .lqd-fancy-menu &gt; ul &gt; li, :scope .e-con:not([data-parallax]) .elementor-element &gt; .elementor-widget-container, :scope .e-con:not([data-parallax]) .elementor-widget-hub_fancy_heading .lqd-split-lines .lqd-lines .split-inner, :scope .e-con:not([data-parallax]) .elementor-widget-hub_fancy_heading .lqd-split-words .lqd-words .split-inner, :scope .e-con:not([data-parallax]) .elementor-widget-hub_fancy_heading .lqd-split-chars .lqd-chars .split-inner, :scope .e-con:not([data-parallax]) .elementor-widget-ld_custom_menu .lqd-fancy-menu &gt; ul &gt; li&quot;,&quot;duration&quot;:1000,&quot;delay&quot;:100,&quot;ease&quot;:[&quot;power4.out&quot;],&quot;initValues&quot;:{&quot;y&quot;:&quot;30px&quot;,&quot;opacity&quot;:0,&quot;transformOrigin&quot;:&quot;50% 50% 0px&quot;},&quot;animations&quot;:{&quot;y&quot;:&quot;0px&quot;,&quot;opacity&quot;:1,&quot;transformOrigin&quot;:&quot;50% 50% 0px&quot;}}"
 								class="elementor-element elementor-element-ad081ac e-con-full e-flex e-con e-child"
@@ -8876,8 +8877,7 @@
 											<div
 												class="lqd-curtain-item d-flex lqd-curtain-item-active elementor-repeater-item-b2489fe">
 												<h4 class="lqd-curtain-item-title d-flex m-0"><span
-														class="lqd-curtain-item-title-inner d-flex align-items-center flex-grow-1 text-vertical">Nexa
-														Mobile</span></h4>
+														class="lqd-curtain-item-title-inner d-flex align-items-center flex-grow-1 text-vertical">Built-in Product Development</span></h4>
 												<div class="lqd-curtain-item-content d-flex align-items-end">
 													<div class="lqd-curtain-item-content-inner">
 														<div class="lqd-curtain-item-content-width-outer">
@@ -9096,8 +9096,8 @@
 																								src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D&#039;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#039; viewBox%3D&#039;0 0 1204 846&#039;%2F%3E"
 																								class="attachment-full size-full wp-image-54 ld-lazyload"
 																								alt="" itemprop="image"
-																								data-src="./assets/images/curtain-1.png"
-																								data-srcset="./assets/images/curtain-1.png 1204w, ./assets/images/curtain-1-300x211.png 300w, ./assets/images/curtain-1-1024x720.png 1024w"
+																								data-src="./assets/images/devsoul.svg"
+																								data-srcset="./assets/images/devsoul.svg 1204w, ./assets/images/devsoul-300x211.svg 300w, ./assets/images/devsoul-1024x720.svg 1024w"
 																								data-sizes="(max-width: 1204px) 100vw, 1204px"
 																								data-aspect="1.4231678486998">
 																						</figure>
@@ -9120,7 +9120,7 @@
 																						class="ld-fancy-heading pos-rel">
 																						<h5
 																							class="ld-fh-element d-inline-block pos-rel  elementor-heading-title lqd-highlight-classic lqd-highlight-grow-left h5">
-																							Nexa Mobile</h5>
+																							Built-in Product Development</h5>
 																					</div>
 
 																				</div>
@@ -9135,9 +9135,7 @@
 																						class="ld-fancy-heading pos-rel">
 																						<p
 																							class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-																							Our team of experts combines
-																							deep technical knowledge
-																							with creative thinking.</p>
+																							Bring your ideas to life an intuitive visual editor create, edit, and customize.</p>
 																					</div>
 
 																				</div>
@@ -9155,7 +9153,7 @@
 											<div
 												class="lqd-curtain-item d-flex lqd-curtain-item-inactive elementor-repeater-item-9551831">
 												<h4 class="lqd-curtain-item-title d-flex m-0"><span
-														class="lqd-curtain-item-title-inner d-flex align-items-center flex-grow-1 text-vertical">SEO</span>
+														class="lqd-curtain-item-title-inner d-flex align-items-center flex-grow-1 text-vertical">Target</span>
 												</h4>
 												<div class="lqd-curtain-item-content d-flex align-items-end">
 													<div class="lqd-curtain-item-content-inner">
@@ -9397,7 +9395,7 @@
 																						class="ld-fancy-heading pos-rel">
 																						<h5
 																							class="ld-fh-element d-inline-block pos-rel  elementor-heading-title lqd-highlight-classic lqd-highlight-grow-left h5">
-																							3D Target</h5>
+																							Target</h5>
 																					</div>
 
 																				</div>
@@ -9432,8 +9430,7 @@
 											<div
 												class="lqd-curtain-item d-flex lqd-curtain-item-inactive elementor-repeater-item-be3ae0e">
 												<h4 class="lqd-curtain-item-title d-flex m-0"><span
-														class="lqd-curtain-item-title-inner d-flex align-items-center flex-grow-1 text-vertical">Photo
-														Retouching</span></h4>
+														class="lqd-curtain-item-title-inner d-flex align-items-center flex-grow-1 text-vertical">AI Retouching</span></h4>
 												<div class="lqd-curtain-item-content d-flex align-items-end">
 													<div class="lqd-curtain-item-content-inner">
 														<div class="lqd-curtain-item-content-width-outer">
@@ -9534,6 +9531,7 @@
 																		}
 																	}
 																</style>
+
 																<div data-elementor-type="container"
 																	data-elementor-id="6848"
 																	class="elementor elementor-6848">
@@ -9556,8 +9554,8 @@
 																								src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns%3D&#039;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#039; viewBox%3D&#039;0 0 1204 846&#039;%2F%3E"
 																								class="attachment-full size-full wp-image-54 ld-lazyload"
 																								alt="" itemprop="image"
-																								data-src="./assets/images/curtain-1.png"
-																								data-srcset="./assets/images/curtain-1.png 1204w, ./assets/images/curtain-1-300x211.png 300w, ./assets/images/curtain-1-1024x720.png 1024w"
+																								data-src="./assets/images/photoretouching.webp"
+																								data-srcset="./assets/images/photoretouching.webp 1204w, ./assets/images/photoretouching.webp 300w, ./assets/images/photoretouching.webp 1024w"
 																								data-sizes="(max-width: 1204px) 100vw, 1204px"
 																								data-aspect="1.4231678486998">
 																						</figure>
@@ -9580,7 +9578,7 @@
 																						class="ld-fancy-heading pos-rel">
 																						<h5
 																							class="ld-fh-element d-inline-block pos-rel  elementor-heading-title lqd-highlight-classic lqd-highlight-grow-left h5">
-																							Nexa Mobile</h5>
+																							AI Retouching</h5>
 																					</div>
 
 																				</div>
@@ -9595,9 +9593,7 @@
 																						class="ld-fancy-heading pos-rel">
 																						<p
 																							class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-																							Our team of experts combines
-																							deep technical knowledge
-																							with creative thinking.</p>
+																							To provide the best retouching results, our portrait enhancer has two modes for different situations: auto-mode for whole-face touchup and custom mode for particle enhancement. Pick the desired mode and get a satisfactory photo retouching effect with the help of AI.</p>
 																					</div>
 
 																				</div>
