--- a/contact.html
+++ b/contact.html
@@ -2089,7 +2089,7 @@
 												</clippath>
 											</defs>
 										</svg> </span>
-									<span class="elementor-icon-list-text">+1 234 9091</span>
+									<span class="elementor-icon-list-text">+840352053998</span>
 								</li>
 
 								<!--Email-->
@@ -2146,7 +2146,7 @@
 												</clippath>
 											</defs>
 										</svg> </span>
-									<span class="elementor-icon-list-text">5th Ave, NYC</span>
+									<span class="elementor-icon-list-text">Mai Dich, Ha Noi</span>
 								</li>
 
 							</ul>
