--- a/terms.html
+++ b/terms.html
@@ -3832,7 +3832,7 @@
 												</clippath>
 											</defs>
 										</svg> </span>
-									<span class="elementor-icon-list-text">+1 234 9091</span>
+									<span class="elementor-icon-list-text">+840352053998</span>
 								</li>
 
 								<!--Email-->
@@ -3889,7 +3889,7 @@
 												</clippath>
 											</defs>
 										</svg> </span>
-									<span class="elementor-icon-list-text">5th Ave, NYC</span>
+									<span class="elementor-icon-list-text">Mai Dich, Ha Noi</span>
 								</li>
 
 							</ul>
